[gd_scene load_steps=2 format=3 uid="uid://c8pp8xlocrxsx"]

[ext_resource type="Script" uid="uid://wl318pk6nvbc" path="res://damage_area/damage_area.gd" id="1_igxxx"]

[node name="DamageArea" type="Area2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_igxxx")

[connection signal="area_entered" from="." to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_world_entered"]
